--- a/config/_default/menu.toml
+++ b/config/_default/menu.toml
@@ -8,17 +8,9 @@
 #newtab = true
 
 [[social]]
-identifier = "github"
-name = "GitHub"
-url = "https://github.com/CaiJimmy/hugo-theme-stack"
+identifier = "groupme"
+name = "GroupMe"
+url = "https://groupme.com/join_group/105050447/Iv19JCVf"
 
 [social.params]
-icon = "brand-github"
-
-[[social]]
-identifier = "twitter"
-name = "Twitter"
-url = "https://twitter.com"
-
-[social.params]
-icon = "brand-twitter"
+icon = "groupme"
